Updated by task 'AUTO_TM_MT_1748259357244' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/0bece33d54789aca809965e201ce80f88bbce6ed

--- a/help/release-notes/2025/may-2025.md
+++ b/help/release-notes/2025/may-2025.md
@@ -2,10 +2,10 @@
 title: Notas da versão de maio de 2025 da Adobe Experience Platform
 description: As notas de versão de maio de 2025 da Adobe Experience Platform.
 exl-id: de312f00-d682-476e-8960-a9ade06ce787
-source-git-commit: 3f143c34d31483e91e176b1c69d82db38a8bc6b5
+source-git-commit: cf88ed1082085fac28553dcc7c7be27c517adb22
 workflow-type: tm+mt
-source-wordcount: '1333'
-ht-degree: 21%
+source-wordcount: '1368'
+ht-degree: 20%
 
 ---
 
@@ -16,10 +16,10 @@ ht-degree: 21%
 >Consulte a documentação a seguir para obter as notas de versão de outros aplicativos da Adobe Experience Platform:
 >
 >- [Adobe Journey Optimizer](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer/using/whats-new/release-notes)
->- [Adobe Journey Optimizer B2B](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer-b2b/user/release-notes)
->- [Customer Journey Analytics](https://experienceleague.adobe.com/pt-br/docs/analytics-platform/using/releases/latest?lang=pt-BR)
->- [Composição de público-alvo federado](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/release-notes)
->- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/pt-br/docs/real-time-cdp-collaboration/using/latest)
+>- [Adobe Journey Optimizer B2B](https://experienceleague.adobe.com/en/docs/journey-optimizer-b2b/user/release-notes)
+>- [Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/releases/latest?lang=pt-BR)
+>- [Composição de público-alvo federado](https://experienceleague.adobe.com/en/docs/federated-audience-composition/using/release-notes)
+>- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/en/docs/real-time-cdp-collaboration/using/latest)
 
 **Data de lançamento: quarta-feira, 20 de maio de 2025**
 
@@ -69,6 +69,7 @@ Para obter mais informações, leia a [Visão geral do Preparo de Dados](../../d
 | Recurso | Descrição |
 | --- | --- |
 | Atualização e suporte para [Público-alvo personalizado do Facebook](../../destinations/catalog/social/facebook.md) para identificadores relacionados a endereços | A partir de 23 de maio de 2025 e durante todo o mês de junho de 2025, você poderá ver temporariamente dois cartões de destino **[!DNL Facebook Custom Audience]** no catálogo de destinos por até algumas horas. Isso se deve a uma atualização interna no serviço de destinos e para oferecer suporte a novos campos para melhorar o direcionamento e a correspondência com perfis nas propriedades do Facebook. Para obter detalhes sobre os novos campos relacionados ao endereço, consulte a seção [identidades com suporte](#supported-identities). <br><br>Se você vir um cartão rotulado como **[!UICONTROL (Novo) Público-alvo personalizado do Facebook]**, use esse cartão para novos fluxos de dados de ativação. Seus fluxos de dados existentes serão atualizados automaticamente, portanto, nenhuma ação é necessária. Quaisquer alterações feitas aos fluxos de dados existentes durante esse período serão preservadas após a atualização. Quando a atualização for concluída, o cartão de destino **[!UICONTROL (Novo) Público-alvo personalizado do Facebook]** será renomeado para **[!DNL Facebook Custom Audience]**. <br><br>Se você estiver criando fluxos de dados usando a [API de Serviço de Fluxo](https://developer.adobe.com/experience-platform-apis/references/destinations/), atualize o [!DNL flow spec ID] e o [!DNL connection spec ID] para os seguintes valores: <ul><li>ID da especificação de fluxo: `bb181d00-58d7-41ba-9c15-9689fdc831d3`</li><li>ID de especificação da conexão: `c8b97383-2d65-4b7a-9913-db0fbfc71727`</li></ul> |
+| Suporte a IDs de anúncios móveis para o [Google Customer Match + Display &amp; Video 360](../../destinations/catalog/advertising/google-customer-match-dv360.md#supported-identities) destination | Agora você pode ativar os públicos para o [Google Customer Match + Display &amp; Video 360](../../destinations/catalog/advertising/google-customer-match-dv360.md#supported-identities) de destino com base nas IDs de anúncios móveis, como [!DNL GAID] e [!DNL IDFA]. |
 | Suporte a identificadores adicionais para [Correspondência de cliente do Google](../../destinations/catalog/advertising/google-customer-match.md) | O destino da Correspondência de clientes do Google agora oferece suporte ao mapeamento de campos relacionados a endereços para melhorar as taxas de correspondência na plataforma da Google. <br><br>Para garantir que o Google corresponda ao endereço, mapeie todos os quatro campos de endereço (`address_info_first_name`, `address_info_last_name`, `address_info_country_code` e `address_info_postal_code`) e verifique se nenhum desses campos tem dados ausentes nos perfis exportados. <br> Se algum campo não estiver mapeado ou contiver dados ausentes, o Google não corresponderá ao endereço. |
 | Coluna de expiração de conta para conexões do [Facebook](../../destinations/catalog/social/facebook.md) | Agora você pode ver as datas de expiração do token da conta do Facebook nas guias [Procurar](../../destinations/ui/destinations-workspace.md#browse) e [Contas](../../destinations/ui/destinations-workspace.md#accounts). |
 | Exportar conjuntos de dados criados pela API | Agora você pode exportar conjuntos de dados criados pela API. A limitação anterior, em que somente os conjuntos de dados criados na interface do usuário estavam disponíveis para exportação, foi removida. Leia mais sobre [exportação de conjuntos de dados](../../destinations/ui/export-datasets.md). |
