Updated by task 'AUTO_TM_MT_1751304493158' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/08f561f7079fe4f0185418a049e1469574b45de5

--- a/help/release-notes/2020/june-2020.md
+++ b/help/release-notes/2020/june-2020.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: June 10, 2020
 author: crhoades, ens28527
 exl-id: bfa61112-06b3-46a3-847d-a48844face52
-source-git-commit: b48c24ac032cbf785a26a86b50a669d7fcae5d97
+source-git-commit: 104db777446b19fa9e3ea7538ae1dda6f51a00b1
 workflow-type: tm+mt
-source-wordcount: '378'
-ht-degree: 27%
+source-wordcount: '367'
+ht-degree: 28%
 
 ---
 
@@ -40,7 +40,7 @@ Observe que o Aprendizado de máquina em tempo real está em alfa e ainda está 
 
 O Adobe Experience Platform [!DNL Segmentation Service] fornece uma interface de usuário e uma API RESTful que permite que você crie segmentos e gere públicos a partir dos dados do [!DNL Real-Time Customer Profile]. Esses segmentos são configurados e mantidos centralmente no [!DNL Experience Platform], tornando-os prontamente acessíveis por qualquer aplicativo do Adobe.
 
-O [!DNL Segmentation Service] define um subconjunto específico de perfis descrevendo os critérios que distinguem um grupo de pessoas na sua base de clientes que pode ser direcionado por campanhas de marketing. Os segmentos podem ser baseados em dados de registro (como informações demográficas) ou em eventos de séries temporais que representam interações de clientes com sua marca.
+O [!DNL Segmentation Service] define um subconjunto específico de perfis descrevendo os critérios que distinguem um grupo de pessoas na sua base de clientes que pode ser direcionado por campanhas de marketing. Os segmentos podem ser baseados em dados de registro (como informações demográficas) ou em eventos de série temporal que representam interações de clientes com sua marca.
 
 **Novos recursos**
 
@@ -54,13 +54,12 @@ Para obter mais informações sobre segmentação, consulte a [Visão geral da s
 
 O Adobe Experience Platform pode assimilar dados de fontes externas e, ao mesmo tempo, permitir que você estruture, rotule e aprimore esses dados usando os serviços do [!DNL Experience Platform]. Você pode assimilar dados de várias fontes, como aplicativos da Adobe, armazenamento baseado em nuvem, software de terceiros e seu sistema de CRM.
 
-O [!DNL Experience Platform] fornece uma API RESTful e uma interface do usuário interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+O [!DNL Experience Platform] fornece uma API RESTful e uma interface do usuário interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de ingestão e gerenciar a taxa de transferência de ingestão de dados.
 
 **Novos recursos**
 
 | Recurso | Descrição |
 | ------- | ----------- |
 | Suporte adicional de API e interface do usuário para sistemas de armazenamento em nuvem | Novo conector de origem para [!DNL Apache HDFS] |
-| Suporte adicional à API e à interface do usuário para bancos de dados | Novo conector de origem para [!DNL Couchbase]. |
 
 Para saber mais sobre fontes, consulte a [visão geral das fontes](../../sources/home.md).
