--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2023
 description: As notas de versão de julho de 2023 da Adobe Experience Platform.
 exl-id: f9fded71-8ce4-47bc-81e8-22b2482e6283
-source-git-commit: f129c215ebc5dc169b9a7ef9b3faa3463ab413f3
+source-git-commit: 2e41a1716e057cd33e4635c11ba9c3cfc185418a
 workflow-type: tm+mt
-source-wordcount: '1760'
-ht-degree: 87%
+source-wordcount: '1729'
+ht-degree: 88%
 
 ---
 
@@ -16,14 +16,14 @@ ht-degree: 87%
 Atualizações dos recursos já existentes na Adobe Experience Platform:
 
 - [Notas de versão da Adobe Experience Platform](#adobe-experience-platform-release-notes)
-   - [Serviço de Catálogo {#catalog-service}](#catalog-service-catalog-service)
-   - [Coleção de dados {#data-collection}](#data-collection-data-collection)
-   - [Preparo de dados {#data-prep}](#data-prep-data-prep)
-   - [Destinos {#destinations}](#destinations-destinations)
-   - [Serviço de consulta {#query-service}](#query-service-query-service)
-   - [Serviço de segmentação {#segmentation}](#segmentation-service-segmentation)
-   - [Fontes {#sources}](#sources-sources)
-   - [Experience Data Model (XDM) {#xdm}](#experience-data-model-xdm-xdm)
+   - [Serviço de catálogo](#catalog-service-catalog-service)
+   - [Coleção de dados](#data-collection-data-collection)
+   - [Preparação de dados](#data-prep-data-prep)
+   - [Destinos](#destinations-destinations)
+   - [Query Service](#query-service-query-service)
+   - [Serviço de segmentação](#segmentation-service-segmentation)
+   - [Origens](#sources-sources)
+   - [Experience Data Model (XDM)](#experience-data-model-xdm-xdm)
 
 ## Serviço de catálogo {#catalog-service}
 
@@ -78,14 +78,14 @@ Para obter mais informações sobre a preparação de dados, leia a [Visão gera
 | [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Azure Data Lake Storage Gen2] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seu próprio local de armazenamento. Este novo destino oferece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
 | [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | Novo | O [!DNL Data Landing Zone] é uma interface de armazenamento do [!DNL Azure Blob] provisionada pela Adobe Experience Platform, que concede a você acesso a um recurso de armazenamento de arquivos seguro e baseado em nuvem para exportar arquivos do Experience Platform. Este novo destino oferece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
 | [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Google Cloud Storage] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seus próprios buckets. Este novo destino oferece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
-| Atualização do [[!DNL Amazon S3] ](../../destinations/catalog/cloud-storage/amazon-s3.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino fornece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
-| Atualização do [[!DNL Azure Blob] ](../../destinations/catalog/cloud-storage/azure-blob.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino fornece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
-| Atualização do [[!DNL SFTP] ](../../destinations/catalog/cloud-storage/sftp.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino fornece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
+| Atualização do [[!DNL Amazon S3] ](../../destinations/catalog/cloud-storage/amazon-s3.md#changelog) | Atualização dos pacotes | Com esta atualização, o destino fornece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
+| Atualização do [[!DNL Azure Blob] ](../../destinations/catalog/cloud-storage/azure-blob.md#changelog) | Atualização dos pacotes | Com esta atualização, o destino fornece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
+| Atualização do [[!DNL SFTP] ](../../destinations/catalog/cloud-storage/sftp.md#changelog) | Atualização dos pacotes | Com esta atualização, o destino fornece funcionalidade aprimorada de exportação de arquivos e oferece suporte a exportações do conjunto de dados do [!BADGE Beta]{type=Informative}. |
 | Conexão com o [[!DNL Adobe Campaign Managed Services] ](../../destinations/catalog/email-marketing/adobe-campaign-managed-services.md) | Atualização dos pacotes | A integração do [!DNL Adobe Campaign Managed Services] com a Adobe Experience Platform agora é compatível com diferentes tipos de sincronização de público-alvo. Use o controle Selecionar tipo de sincronização para determinar se você deve exportar públicos-alvo para o Adobe Campaign ou os públicos-alvo e seus atributos de perfil. <br> ![Novo seletor Selecionar tipo de sincronização realçado.](/help/release-notes/2023/assets/acms-destination-export-type.png "Novo seletor Selecionar tipo de sincronização realçado."){width="100" zoomable="yes"} |
 
 {style="table-layout:auto"}
 
-**Funcionalidades novas ou atualizadas** {#destinations-new-updated-functionality}
+**Funcionalidade nova ou atualizada** {#destinations-new-updated-functionality}
 
 A versão de atualização e disponibilidade geral dos seis destinos de armazenamento em nuvem acima fornece a seguinte funcionalidade:
 
@@ -105,7 +105,7 @@ Para obter informações mais gerais sobre destinos, consulte a [visão geral de
 
 ## Query Service {#query-service}
 
-O Query Service permite usar o SQL padrão para consultar dados no data lake da Adobe Experience Platform. É possível unir qualquer conjunto de dados do data lake e capturar os resultados de consultas como um novo conjunto de dados para usar em relatórios, no espaço de trabalho de ciência de dados ou para assimilação no perfil do cliente em tempo real.
+O Query Service permite usar o SQL padrão para consultar dados no data lake da Adobe Experience Platform. É possível unir qualquer conjunto de dados do data lake e capturar os resultados de consultas como um novo conjunto de dados para usar em relatórios, no espaço de trabalho de ciência de dados ou para ingestão no perfil do cliente em tempo real.
 
 **Recursos atualizados**
 
@@ -120,7 +120,7 @@ Para obter mais informações sobre o serviço de consulta, consulte a [Visão g
 
 ## Serviço de segmentação {#segmentation}
 
-O [!DNL Segmentation Service] permite segmentar dados relacionados a indivíduos (como clientes, prospectos, usuários ou organizações) que estão armazenados na [!DNL Experience Platform] em públicos-alvo. Você pode criar públicos-alvo por meio de definições de segmento ou outras fontes a partir dos dados do [!DNL Real-Time Customer Profile]. Esses públicos-alvo são configurados e mantidos de forma centralizada na [!DNL Experience Platform] e podem ser acessados a qualquer momento usando as soluções da Adobe.
+O [!DNL Segmentation Service] permite segmentar dados relacionados a pessoas (como clientes, clientes potenciais, usuários ou organizações) que estão armazenados na [!DNL Experience Platform] em públicos-alvo. Você pode criar públicos-alvo por meio de definições de segmento ou outras fontes a partir dos dados do [!DNL Real-Time Customer Profile]. Esses públicos-alvo são configurados e mantidos de forma centralizada na [!DNL Experience Platform] e podem ser acessados a qualquer momento usando as soluções da Adobe.
 
 **Recursos novos ou atualizados**
 
@@ -133,14 +133,13 @@ Para obter mais informações sobre o [!DNL Segmentation Service], consulte a [V
 
 ## Origens {#sources}
 
-A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de ingestão e gerenciar a taxa de transferência de ingestão de dados.
 
 **Recursos novos ou atualizados**
 
 | Recurso | Descrição |
 | --- | --- |
 | [!BADGE Beta]{type=Informative} [!DNL SAP Commerce] | Agora você pode usar a origem do [[!DNL SAP Commerce] ](../../sources/connectors/ecommerce/sap-commerce.md) para trazer os dados de faturamento de assinatura da sua conta do [!DNL SAP Commerce] para a Experience Platform. |
-| Compatibilidade com o [!DNL Phoenix] | Agora você pode usar a origem do [[!DNL Phoenix] ](../../sources/connectors/databases/phoenix.md) para trazer dados do seu banco de dados do [!DNL Phoenix] para a Experience Platform. |
 | Atualizações de autenticação do [!DNL Salesforce] e [!DNL Salesforce Service Cloud] | Agora você pode especificar a versão da API da sua origem do [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Salesforce Service Cloud]](../../sources/connectors/customer-success/salesforce-service-cloud.md) ao autenticar uma nova conta com a interface da Experience Platform ou a API do [!DNL Flow Service]. |
 
 {style="table-layout:auto"}
@@ -155,7 +154,7 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 | Tipo de componente | Nome | Descrição |
 | --- | --- | --- |
-| Classe | [[!UICONTROL Perfil de cliente potencial individual do XDM]](https://github.com/adobe/xdm/pull/1758/files) | Use esta classe para atrair perfis em potencial provenientes de casos de uso de conquista de cliente do topo de funil dos fornecedores de dados. |
+| Classe | [[!UICONTROL Perfil de cliente potencial individual do XDM]](https://github.com/adobe/xdm/pull/1758/files) | Use esta classe para atrair perfis de clientes potenciais provenientes de casos de uso de conquista de cliente do topo de funil dos fornecedores de dados. |
 | Grupo de campos | [[!UICONTROL Detalhes de segmento de evento enriquecido]](https://github.com/adobe/xdm/pull/1754/files) | Uma lista de públicos-alvo para os quais o perfil se qualifica no momento da coleta do evento. |
 
 {style="table-layout:auto"}
