--- a/help/release-notes/2021/july-2021.md
+++ b/help/release-notes/2021/july-2021.md
@@ -5,7 +5,7 @@ doc-type: release notes
 last-update: July 28, 2021
 author: ens72471
 exl-id: 1810b42e-8e9e-49ed-a29f-71795e30fcb8
-source-git-commit: f129c215ebc5dc169b9a7ef9b3faa3463ab413f3
+source-git-commit: 2e41a1716e057cd33e4635c11ba9c3cfc185418a
 workflow-type: tm+mt
 source-wordcount: '827'
 ht-degree: 21%
@@ -90,11 +90,11 @@ Para obter mais informações, consulte a [documentação do Serviço de consult
 
 O Adobe Experience Platform pode assimilar dados de fontes externas e, ao mesmo tempo, estruturar, rotular e aprimorar esses dados usando os serviços da Experience Platform. É possível assimilar dados de várias origens, como aplicativos da Adobe, do armazenamento na nuvem, um software de terceiros e do seu sistema de CRM.
 
-A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de ingestão e gerenciar a taxa de transferência de ingestão de dados.
 
 | Recurso | Descrição |
 | ------- | ----------- |
-| Origens do Beta migrando para o GA | As seguintes fontes foram promovidas de beta para GA: <ul><li>[[!DNL Amazon Redshift]](../../sources/connectors/databases/redshift.md)</li><li>[[!DNL Azure Table Storage]](../../sources/connectors/databases/ats.md)</li><li>[[!DNL PayPal]](../../sources/connectors/payments/paypal.md)</li></ul> |
+| Origens do Beta migrando para o GA | As seguintes fontes foram promovidas de beta para GA: <ul><li>[[!DNL Amazon Redshift]](../../sources/connectors/databases/redshift.md)</li><li>[[!DNL Azure Table Storage]](../../sources/connectors/databases/ats.md)</li></ul> |
 | [!DNL Salesforce Marketing Cloud] (Beta) | Agora você pode conectar o [!DNL Salesforce Marketing Cloud] ao Experience Platform usando a API [!DNL Flow Service] ou a interface do usuário. Consulte a [[!DNL Salesforce Marketing Cloud] visão geral do conector](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md) para obter mais informações. |
 
 Para saber mais sobre fontes, consulte a [visão geral das fontes](../../sources/home.md).
