--- a/help/release-notes/2025/june-2025.md
+++ b/help/release-notes/2025/june-2025.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2025
 description: As notas de versão de junho de 2025 da Adobe Experience Platform.
 exl-id: 79f7e2ff-eff1-4f15-b8d9-f5b83d7ad9e7
-source-git-commit: fb34e033c90c269742a2045025bf0c964b513679
+source-git-commit: c78dc0e83976499403e066b314a0889df803c976
 workflow-type: tm+mt
 source-wordcount: '1665'
 ht-degree: 18%
@@ -17,9 +17,9 @@ ht-degree: 18%
 >
 >- [Adobe Journey Optimizer](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer/using/whats-new/release-notes)
 >- [Adobe Journey Optimizer B2B](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer-b2b/user/release-notes)
->- [Customer Journey Analytics](https://experienceleague.adobe.com/pt-br/docs/analytics-platform/using/releases/pre-release-notes)
->- [Composição de público-alvo federado](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/e-release-notes)
->- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/pt-br/docs/real-time-cdp-collaboration/using/latest)
+>- [Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/releases/pre-release-notes)
+>- [Composição de público-alvo federado](https://experienceleague.adobe.com/en/docs/federated-audience-composition/using/e-release-notes)
+>- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/en/docs/real-time-cdp-collaboration/using/latest)
 
 **Data de lançamento: quinta-feira, 18 de junho de 2025**
 
@@ -127,7 +127,7 @@ A Federated Audience Composition permite que as empresas componham dados para ob
 
 | Novo recurso | Descrição |
 | ----------- | ----------- |
-| Disponibilidade geral para clientes do Adobe Healthcare Shield | O Federated Audience Composition estará disponível para os clientes do Adobe Healthcare Shield para casos de uso de criação de público, enriquecimento e enriquecimento de perfil até o final de junho. Para obter mais informações sobre as medidas de privacidade e segurança da Federated Audience Composition, leia a [visão geral sobre privacidade e segurança na Federated Audience Composition](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/start/privacy-security). Para obter mais informações sobre a conformidade com a HIPAA para produtos da Experience Platform em geral, leia a [visão geral sobre produtos e serviços da HIPAA e da Adobe](https://www.adobe.com/trust/compliance/hipaa-ready.html). |
+| Disponibilidade geral para clientes do Adobe Healthcare Shield | O Federated Audience Composition estará disponível para os clientes do Adobe Healthcare Shield para casos de uso de criação de público, enriquecimento e enriquecimento de perfil até o final de junho. Para obter mais informações sobre as medidas de privacidade e segurança da Federated Audience Composition, leia a [visão geral sobre privacidade e segurança na Federated Audience Composition](https://experienceleague.adobe.com/en/docs/federated-audience-composition/using/start/privacy-security). Para obter mais informações sobre a conformidade com a HIPAA para produtos da Experience Platform em geral, leia a [visão geral sobre produtos e serviços da HIPAA e da Adobe](https://www.adobe.com/trust/compliance/hipaa-ready.html). |
 
 Para obter mais informações, leia a [documentação sobre a Composição de Público-Alvo Federado](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/home).
 
@@ -139,7 +139,7 @@ Várias regulamentações legais e organizacionais dão aos usuários o direito 
 
 | Recurso | Descrição |
 | --- | ---|
-| Suporte às leis de privacidade do Tennessee e de Minnesota | A Privacy Service agora oferece suporte à Lei de Proteção de Informações do Tennessee (`tipa_tn_usa`) e à Lei de Privacidade de Dados do Consumidor de Minnesota (`mcdpa_mn_usa`). Você pode processar solicitações de acesso e exclusão em conformidade com esses novos regulamentos de nível de estado. Consulte a [Visão geral de Regulamentos](https://experienceleague.adobe.com/pt-br/docs/experience-platform/privacy/regulations/overview) para obter mais detalhes. |
+| Suporte às leis de privacidade do Tennessee e de Minnesota | A Privacy Service agora oferece suporte à Lei de Proteção de Informações do Tennessee (`tipa_tn_usa`) e à Lei de Privacidade de Dados do Consumidor de Minnesota (`mcdpa_mn_usa`). Você pode processar solicitações de acesso e exclusão em conformidade com esses novos regulamentos de nível de estado. Consulte a [Visão geral de Regulamentos](https://experienceleague.adobe.com/en/docs/experience-platform/privacy/regulations/overview) para obter mais detalhes. |
 
 Consulte a [visão geral do Privacy Service](../../privacy-service/home.md) para obter mais informações sobre o serviço.
 
@@ -176,7 +176,7 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 | Recurso | Descrição |
 | --- | --- |
 | Suporte à interface do usuário do [!BADGE Beta]{type=Informative} para [!DNL Azure Databricks] | Agora você pode conectar sua conta do [!DNL Azure Databricks] à Experience Platform usando o espaço de trabalho de origens na interface. Leia o manual sobre [conexão [!DNL Databricks] ao Experience Platform na interface](../../sources/connectors/databases/databricks.md) para obter mais informações. |
-| Suporte para novo tipo de autenticação para [!DNL Azure Synapse Analytics] | O [!DNL Azure Synapse Analytics] agora também oferecerá suporte à autenticação da entidade de serviço, além da autenticação da cadeia de conexão existente. Para obter mais informações, leia a [[!DNL Azure Synapse Analytics] visão geral de autenticação](../../sources/connectors/databases/synapse-analytics.md) |
+| Suporte para novo tipo de autenticação para [!DNL Azure Synapse Analytics] | O [!DNL Azure Synapse Analytics] agora também oferecerá suporte à autenticação da entidade de serviço, além da autenticação da cadeia de conexão existente. Para obter mais informações, leia a [[!DNL Azure Synapse Analytics] visão geral da autenticação](../../sources/connectors/databases/synapse-analytics.md). |
 | Descontinuação da Autenticação Básica do [!DNL Salesforce] | A Autenticação Básica do [Salesforce CRM](../../sources/connectors/crm/salesforce.md) e da [Salesforce Service Cloud](../../sources/connectors/customer-success/salesforce-service-cloud.md) será substituída em janeiro de 2026. Os clientes devem migrar para a autenticação OAuth 2.0 para manter a conectividade. Essa alteração afeta os conectores de origem e garante maior segurança e conformidade com os padrões de autenticação da Salesforce. |
 
 {style="table-layout:auto"}
