Updated by task 'AUTO_TM_MT_1753881352239' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/2846e8f63882bccbd9f383edd6302992a32cc447

--- a/help/release-notes/2025/july-2025.md
+++ b/help/release-notes/2025/july-2025.md
@@ -1,7 +1,7 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2025
 description: As notas de versão de julho de 2025 da Adobe Experience Platform.
-exl-id: f854f9e5-71be-4d56-a598-cfeb036716cb
+exl-id: 0329a014-4f45-4d96-9ae0-bed89e6e52c6
 source-git-commit: ec87cb1c8755f52233a5725aa3bb0c80a135d60c
 workflow-type: tm+mt
 source-wordcount: '0'
@@ -9,8 +9,7 @@ ht-degree: 0%
 
 ---
 
-
-# Notas de versão da Adobe Experience Platform
+# Notas de pré-lançamento do Adobe Experience Platform
 
 >[!TIP]
 >
@@ -157,3 +156,5 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 | Suporte para captura de dados de alteração em fontes selecionadas usando a API [!DNL Flow Service] | Agora é possível criar fluxos de dados que permitem a captura de dados de alteração para assimilação incremental usando conectores de origem. Esse recurso permite que os clientes tragam tipos de dados de alteração para assimilação incremental, melhorando a atualização de dados e reduzindo a sobrecarga de processamento. Para obter mais informações, leia a documentação sobre [usando a captura de dados de alteração para fontes](../../sources/tutorials/api/change-data-capture.md) |
 
 Para obter mais informações, leia a [visão geral de fontes](../../sources/home.md).
+
+<!-- | Support for soft deletion of records in [!DNL Salesforce] | The [!DNL Salesforce] source now supports including soft deleted records through an optional `includeDeletedObjects` parameter. When set to true, customers can include soft deleted records in their [!DNL Salesforce] queries and bring these records into Experience Platform. Read the [[!DNL Salesforce] source documentation](../../sources/connectors/crm/salesforce.md) for more information. | -->
