--- a/help/release-notes/2025/july-2025.md
+++ b/help/release-notes/2025/july-2025.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2025
 description: As notas de versão de julho de 2025 da Adobe Experience Platform.
 exl-id: 0329a014-4f45-4d96-9ae0-bed89e6e52c6
-source-git-commit: ec87cb1c8755f52233a5725aa3bb0c80a135d60c
+source-git-commit: 2a8d5576ea937cdda70f10218b5eec35613fd264
 workflow-type: tm+mt
-source-wordcount: '0'
-ht-degree: 0%
+source-wordcount: '1623'
+ht-degree: 13%
 
 ---
 
@@ -17,9 +17,9 @@ ht-degree: 0%
 >
 >- [Adobe Journey Optimizer](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer/using/whats-new/release-notes)
 >- [Adobe Journey Optimizer B2B](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer-b2b/user/release-notes)
->- [Customer Journey Analytics](https://experienceleague.adobe.com/pt-br/docs/analytics-platform/using/releases/pre-release-notes)
->- [Composição de público-alvo federado](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/e-release-notes)
->- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/pt-br/docs/real-time-cdp-collaboration/using/latest)
+>- [Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/releases/pre-release-notes)
+>- [Composição de público-alvo federado](https://experienceleague.adobe.com/en/docs/federated-audience-composition/using/e-release-notes)
+>- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/en/docs/real-time-cdp-collaboration/using/latest)
 
 **Data de lançamento: quarta-feira, 29 de julho de 2025**
 
@@ -27,12 +27,13 @@ Novos recursos e atualizações dos recursos existentes no Adobe Experience Plat
 
 - [Capacidade](#capacity)
 - [Destinos](#destinations)
-- [Ingestão de dados](#ingestion)
-- [Query Service](#query-service)
+- [Ingestão de dados](#data-ingestion)
+- [Serviço de consulta]&#x200B;(#query-service
 - [Real-Time CDP B2B Edition](#b2b)
 - [Sandboxes](#sandboxes)
-- [Serviço de segmentação](#segmentation)
+- [Serviço de segmentação](#segmentation-service)
 - [Origens](#sources)
+
 
 ## Capacidade {#capacity}
 
@@ -154,7 +155,7 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 | Recurso | Descrição |
 | --- | --- |
 | Suporte para captura de dados de alteração em fontes selecionadas usando a API [!DNL Flow Service] | Agora é possível criar fluxos de dados que permitem a captura de dados de alteração para assimilação incremental usando conectores de origem. Esse recurso permite que os clientes tragam tipos de dados de alteração para assimilação incremental, melhorando a atualização de dados e reduzindo a sobrecarga de processamento. Para obter mais informações, leia a documentação sobre [usando a captura de dados de alteração para fontes](../../sources/tutorials/api/change-data-capture.md) |
+| Suporte para exclusão reversível de registros em [!DNL Salesforce] | A origem [!DNL Salesforce] agora dá suporte à inclusão de registros excluídos por meio de um parâmetro `includeDeletedObjects` opcional. Quando definido como verdadeiro, os clientes podem incluir registros excluídos por software em suas consultas [!DNL Salesforce] e trazer esses registros para a Experience Platform. Leia a documentação da origem](../../sources/connectors/crm/salesforce.md) do [[!DNL Salesforce]  para obter mais informações. |
 
 Para obter mais informações, leia a [visão geral de fontes](../../sources/home.md).
 
-<!-- | Support for soft deletion of records in [!DNL Salesforce] | The [!DNL Salesforce] source now supports including soft deleted records through an optional `includeDeletedObjects` parameter. When set to true, customers can include soft deleted records in their [!DNL Salesforce] queries and bring these records into Experience Platform. Read the [[!DNL Salesforce] source documentation](../../sources/connectors/crm/salesforce.md) for more information. | -->
