Updated by task 'AUTO_TM_MT_1753933301519' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/6c0f2a60f6b2ef5dd8782b886fe43169af65b838

--- a/help/release-notes/2025/july-2025.md
+++ b/help/release-notes/2025/july-2025.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2025
 description: As notas de versão de julho de 2025 da Adobe Experience Platform.
 exl-id: 0329a014-4f45-4d96-9ae0-bed89e6e52c6
-source-git-commit: 2a8d5576ea937cdda70f10218b5eec35613fd264
+source-git-commit: 2553b8f016a20678550eed50671e3549ec42aae7
 workflow-type: tm+mt
-source-wordcount: '1623'
-ht-degree: 13%
+source-wordcount: '1457'
+ht-degree: 14%
 
 ---
 
@@ -17,9 +17,9 @@ ht-degree: 13%
 >
 >- [Adobe Journey Optimizer](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer/using/whats-new/release-notes)
 >- [Adobe Journey Optimizer B2B](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer-b2b/user/release-notes)
->- [Customer Journey Analytics](https://experienceleague.adobe.com/pt-br/docs/analytics-platform/using/releases/pre-release-notes)
->- [Composição de público-alvo federado](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/e-release-notes)
->- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/pt-br/docs/real-time-cdp-collaboration/using/latest)
+>- [Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/releases/pre-release-notes)
+>- [Composição de público-alvo federado](https://experienceleague.adobe.com/en/docs/federated-audience-composition/using/e-release-notes)
+>- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/en/docs/real-time-cdp-collaboration/using/latest)
 
 **Data de lançamento: quarta-feira, 29 de julho de 2025**
 
@@ -28,7 +28,6 @@ Novos recursos e atualizações dos recursos existentes no Adobe Experience Plat
 - [Capacidade](#capacity)
 - [Destinos](#destinations)
 - [Ingestão de dados](#data-ingestion)
-- [Serviço de consulta]&#x200B;(#query-service
 - [Real-Time CDP B2B Edition](#b2b)
 - [Sandboxes](#sandboxes)
 - [Serviço de segmentação](#segmentation-service)
@@ -84,19 +83,6 @@ O Experience Platform fornece uma estrutura abrangente de assimilação de dados
 | Suporte para monitorar a assimilação de perfil de transmissão | O monitoramento em tempo real para assimilação de perfil por transmissão agora está disponível, fornecendo transparência às métricas de taxa de transferência, latência e qualidade de dados. Isso oferece suporte a alertas proativos e insights acionáveis para ajudar os engenheiros de dados a identificar violações de capacidade e problemas de assimilação. Leia o guia em [assimilação do perfil de streaming de monitoramento](../../dataflows/ui/monitor-streaming-profile.md) para obter mais informações. |
 
 Para obter mais informações, leia a [visão geral da assimilação de dados](../../ingestion/home.md).
-
-## Query Service {#query-service}
-
-Consultar dados no data lake da Adobe Experience Platform usando SQL padrão com Serviço de consulta. Combine conjuntos de dados facilmente e gere novos a partir dos resultados da consulta para potencializar os relatórios, ativar fluxos de trabalho de ciência de dados ou facilitar a assimilação no Perfil do cliente em tempo real. Por exemplo, você pode mesclar dados de transações de clientes com dados comportamentais para identificar públicos-alvo de alto valor para campanhas de marketing direcionadas.
-
-**Recursos novos ou atualizados**
-
-| Recurso | Descrição |
-|--------|-------------|
-| Suporte para restrições de caracteres de senha de credenciais sem expiração | O Data Distiller agora oferece suporte a [credenciais sem expiração com restrições de caracteres específicas](../../query-service/ui/credentials.md#non-expiring-credentials). Embora as senhas exijam pelo menos um número, uma letra minúscula, uma maiúscula e um caractere especial, o cifrão ($) não é compatível. Os caracteres especiais recomendados incluem `!, @, #, ^, or &`. |
-| Maior consistência de desempenho entre ambientes | O desempenho [do Data Distiller agora está consistente entre as sandboxes de desenvolvimento e produção](../../query-service/troubleshooting-guide.md#data-distiller), com recursos de back-end semelhantes disponíveis em ambos os ambientes. As horas de computação consumidas podem variar com base no volume de dados e nos recursos de computação de back-end disponíveis no momento do processamento. |
-
-Para obter mais informações sobre [!DNL Query Service], consulte a [[!DNL Query Service] visão geral](../../query-service/home.md).
 
 ## Real-Time CDP B2B Edition {#b2b}
 
@@ -155,7 +141,7 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 | Recurso | Descrição |
 | --- | --- |
 | Suporte para captura de dados de alteração em fontes selecionadas usando a API [!DNL Flow Service] | Agora é possível criar fluxos de dados que permitem a captura de dados de alteração para assimilação incremental usando conectores de origem. Esse recurso permite que os clientes tragam tipos de dados de alteração para assimilação incremental, melhorando a atualização de dados e reduzindo a sobrecarga de processamento. Para obter mais informações, leia a documentação sobre [usando a captura de dados de alteração para fontes](../../sources/tutorials/api/change-data-capture.md) |
-| Suporte para exclusão reversível de registros em [!DNL Salesforce] | A origem [!DNL Salesforce] agora dá suporte à inclusão de registros excluídos por meio de um parâmetro `includeDeletedObjects` opcional. Quando definido como verdadeiro, os clientes podem incluir registros excluídos por software em suas consultas [!DNL Salesforce] e trazer esses registros para a Experience Platform. Leia a documentação da origem[&#128279;](../../sources/connectors/crm/salesforce.md) do [!DNL Salesforce]  para obter mais informações. |
+| Suporte para exclusão reversível de registros em [!DNL Salesforce] | A origem [!DNL Salesforce] agora dá suporte à inclusão de registros excluídos por meio de um parâmetro `includeDeletedObjects` opcional. Quando definido como verdadeiro, os clientes podem incluir registros excluídos por software em suas consultas [!DNL Salesforce] e trazer esses registros para a Experience Platform. Leia a documentação da origem](../../sources/connectors/crm/salesforce.md) do [[!DNL Salesforce]  para obter mais informações. |
 
 Para obter mais informações, leia a [visão geral de fontes](../../sources/home.md).
 
